added basic flows
